The code adapter implemented.